kubernetes/05-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: user-mgmt
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: user-mgmt-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
