kubernetes/07-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: user-mgmt
  labels:
    app.kubernetes.io/name: backend
    app.kubernetes.io/part-of: user-mgmt-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: backend
  ports:
    - port: 8080
      targetPort: 8080
      name: http
