kubernetes/09-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: user-mgmt
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: user-mgmt-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend
  ports:
    - port: 3000
      targetPort: 3000
      name: http
